[gd_scene load_steps=10 format=2]

[ext_resource path="res://Graphics/kenney/Future.tres" type="DynamicFont" id=1]
[ext_resource path="res://GameOver.gd" type="Script" id=2]
[ext_resource path="res://Graphics/kenney_buttons/yellow_long_normal.png" type="Texture" id=3]
[ext_resource path="res://Graphics/kenney/future_thin_buttons.tres" type="DynamicFont" id=4]
[ext_resource path="res://Graphics/kenney_buttons/yellow_long_pressed.png" type="Texture" id=5]
[ext_resource path="res://Graphics/kenney_buttons/yellow_long_hover.png" type="Texture" id=6]
[ext_resource path="res://Graphics/kenney_buttons/green_long_pressed.png" type="Texture" id=7]
[ext_resource path="res://Graphics/kenney_buttons/green_long_hover.png" type="Texture" id=8]
[ext_resource path="res://Graphics/kenney_buttons/green_long_normal.png" type="Texture" id=9]

[node name="GameOver" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 580.0
margin_top = 391.0
margin_right = 1340.0
margin_bottom = 688.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="TextureButton" parent="VBoxContainer"]
margin_right = 760.0
margin_bottom = 98.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="VBoxContainer/PlayAgain"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "play again"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenu" type="TextureButton" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 760.0
margin_bottom = 200.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/BackToMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "back to menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 760.0
margin_bottom = 297.0
custom_fonts/font = ExtResource( 1 )
text = "highscore: 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/PlayAgain" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
